app/assets/stylesheets/partials/_custom.scss
// ERROR MESSAGES
// -----------------------------------------------------

#error_explanation {
  @extend .alert;
  @extend .alert-danger;

  h2 {
    font-family: $font-family-base;
    font-size: $font-size-base;
    margin: 0 0 0.5em 0;
  }
}

// COMPONENTS
// ------------------------------------------------------

.navbar.navbar-default {
  border: none;
  background: $gray-lighter;
  
  .navbar-nav {
    > li > a:hover, > .open > a {
      background: rgba(255, 255, 255, 0.5);
    }

    > .active > a {
      background: white;

      &:hover {
        background: white;
      }
    }

    .dropdown-menu {
      border-top: none;
    }
  }
}

.navbar .navbar-text {
  font-family: $font-family-base;
  font-weight: normal;
  color: $text-color;
}

.navbar.navbar-sm {
  min-height: 30px;
  margin-bottom: 0;
  background: transparent;

  .container {
    padding: 0;
  }
}

.navbar.navbar-sm .navbar-text {
  margin: 10px 0;
}

// CHURCH DISPLAY
// ------------------------------------------------------

.church {
  margin-bottom: 10px;

  h4 {
    margin-bottom: 5px;
  }
}

.church-image {
  background-size: cover;
  background-position: center;
  height: 300px;
  margin: 0 -15px 10px -15px;
}

.church:first-child .church-image {
  margin-left: 0;
}

.church-location {
  @extend .well;
  padding: 0;

  width: 64px;
  height: 64px;
  font-size: 47px;
  text-align: center;
  background-image: image-url("roadmap.svg");

  i:before {
    padding-top: 8px;
    color: $gray;
  }
}

// HOMEPAGE
// -------------------------------------------------------

.title-box {
  margin-top: 20px;
  margin-bottom: 20px;
}

.headings {
  h1, h2 {
    display: inline-block;
  }

  h1 {
    font-size: $font-size-base * 4;
    margin-bottom: 0;
  }

  h2 {
    position: relative;
    left: 6px;
    margin: 0;
    font-size: $font-size-base * 1.25;
  }
}

.leader-box {
  @extend .well;
  @extend .well-sm;
  margin-top: 15px;

  img {
    float: right;
    display: inline-block;
    margin: 5px 0 5px 5px;
  }

  h6 {
    margin: 5px 0;
  }

  h4 {
    margin: 5px 0;
  }

  .glyphicon {
    display: inline-block;
    margin-right: 5px;

    &.glyphicon-phone {
      margin-right: 1px;
    }
  }
}

table.fill {
  width: 100%;
}

td.fill {
  width: 50%;
}

td.user-controls {
  width: 50%;
  text-align: right;
}

table.sermons {
  width: 100%;
  margin-top: 20px;
  border-bottom: 1px solid $gray-light;

  &.compact {
    width: 530px;
  }

  td {
    border-top: 1px solid $gray-light;
    padding: 20px 0;
  }

  td.description {
    width: 100%;
  }

  td.player {
    min-width: 350px;
  }

  td.controls {
    min-width: 190px;
    text-align: right;
  }

  td.download .btn {
    height: 36px;
    font-size: 18px;
    line-height: 38px;
    padding: 0 10px;
    margin-left: 10px;
  }
}

table.photos {
  margin-top: 10px;

  td {
    vertical-align: top;
    padding-top: 10px;
  }

  .well {
    margin-right: 10px;
    margin-top: -10px;

    img {
      width: 100px;
      height: 100px;
    }
  }
}

.thumbs a {
  @extend .well;
  @extend .well-sm;

  display: inline-block;
  margin: 10px;

  background-repeat: no-repeat;
  background-position: center;

  img {
    display: inline-block;
  }
  
  p {
    margin: 10px 0 0 0;
  }
}

.cke.cke_chrome {
  margin-bottom: 10px;
}

.popover {
  width: auto;
  border-radius: 0;
}

// NEWS

#news table {
  td {
    vertical-align: top;
  }
  
  td.title {
    text-align: right;
    border-right: 3px solid $gray-light;
    padding: 5px 5px 5px 10px;
    min-width: 140px;
  }
  
  td.time {
    font-style: italic;
    padding: 5px 0 5px 5px;
    min-width: 90px;
  }

  td.news-item {
    padding: 5px 10px 5px 0;
    width: 100%;
    
    p {
      margin: 0;
    }
  }

  td.controls {
    min-width: 100px;
    text-align: right;
    padding: 5px;
  }

  tr.highlight td {
    background: $gray-lighter;
  }

  tr.highlight td.title {
    border-right-color: $gray;
  }
}

// PHOTOS

.gallery {
  display: inline-block;
  margin-right: 10px;

  img {
    display: block;
    padding-bottom: 5px;
  }

  .user-controls {
    text-align: right;
  }
}

// RESPONSIVE STYLES
// --------------------------------------------------------

@media(max-width: 979px) {
  #title-zone {
    float: none;
  }

  #leader-box {
    float: none;

    .pull-left, .pull-right {
      margin-bottom: 0;
    }

    a.pull-right {
      float: right; // Because Bootstrap clears the float on small screens
    }

    i.pull-right {
      display: inline;
      margin-right: -0.4em;
      margin-left: 0.2em;
    }
  }
}

@media(max-width: 767px) {
  body {
    padding: 0;
  }

  // Probably won't work for any other popovers - should probably add a separate class
  .popover {
    position: relative;
    border: none;
    background: none;
    @include box-shadow(none);

    // Override whatever position it should be in on larger screens
    top: 0 !important;
    left: 0 !important;

    .arrow {
      display: none;
    }
  }

  .church-image {
    margin-left: 0;
    margin-right: 0;
    height: 250px;
  }

  .navbar p {
    margin-left: 20px;
    margin-right: 20px;
  }
}

// Play nice with IE10 snap
@-ms-viewport{
    width: device-width;
}

// MISC

ul.sortable li {
  cursor: move;
}

.cke_reset_all, .cke_reset_all * {
  box-sizing: content-box;
}

.row.padded {
  padding-top: 10px;
  padding-bottom: 10px;
}

h1 .glyphicon {
  font-size: 21px;
}

.well > h3:first-child {
  margin-top: 0;
}

.navbar {
  font-size: $font-size-base;
}

.form-buttons {
  text-align: center;
}

.form-horizontal .form-group .datepicker {
  padding: 0;
}

.form-horizontal .input-group input.timepicker.form-control {
  border-top-left-radius: $border-radius-base;
  border-bottom-left-radius: $border-radius-base;
}

ul.no-decoration {
  margin-left: 0;
  padding-left: 0;
  list-style-type: none;

  li.well-sm {
    margin-bottom: 10px;
  }
}

ul.card-flow {
  @extend ul.no-decoration;

  li {
    display: inline-block;
    margin-right: 10px;

    p, div {
      text-align: center;
    }

    img {
      display: block;
      margin-bottom: 10px;
    }
  }
}

form .form-control.form-control-inline {
  display: inline-block;
  width: auto;
}

// Keep the BS2.x timepicker limping along ...
.bootstrap-timepicker-widget {
  .icon-chevron-up {
    @extend .glyphicon;
    @extend .glyphicon-menu-up;
  }
  .icon-chevron-down {
    @extend .glyphicon;
    @extend .glyphicon-menu-down;
  }
  input {
    @extend .form-control;
  }
}

